# RobotProgramming

./: .gitignore  README.md
Exercises/01 - Compilers & build systems/exercise/mini_core/: CMakeLists.txt
Exercises/01 - Compilers & build systems/exercise/mini_core/executables/: CMakeLists.txt
Exercises/01 - Compilers & build systems/exercise/mini_core/src/: CMakeLists.txt
Exercises/02 - CPP Inheritance/: 04_inheritance
Exercises/02.0 - CPP Inheritance/: 04_inheritance  04_inheritance.cpp  07_late_binding  07_late_binding.cpp
Exercises/02.0 - CPP Inheritance/Simulator/src/: lidar.cpp  main.cpp  pan_unit.cpp  robot.cpp  world.cpp  world.h
Exercises/03 - CPP Templates/exercise/: CMakeLists.txt
Exercises/03 - CPP Templates/exercise/src/: CMakeLists.txt
Exercises/03 - CPP Templates/exercise/src/btree/: CMakeLists.txt  btree.cpp  btree.h  btree_main.cpp  main
Exercises/03 - CPP Templates/exercise/src/linalg/: CMakeLists.txt  mat_f.cpp  mat_f.h  mat_f_main  mat_f_main.cpp  vec_f.cpp  vec_f.h  vec_f_main  vec_f_main.cpp
Exercises/05 - STL/exercise/: CMakeLists.txt
Exercises/05 - STL/exercise/src/: binary_tree_template.h  binary_tree_template_test  int_sort  int_sort.cpp  point_multisort  point_multisort.cpp  point_with_index.h
Exercises/06 - Eigen/exercise/: CMakeLists.txt  eigen_01_point_loading.h  eigen_01_point_loading_test  eigen_01_point_loading_test.cpp  mean_covariance  mean_covariance.cpp  rotations.h  transform_points_test  transform_points_test.cpp
Exercises/07 - CPP KD Tree/exercise/: CMakeLists.txt  eigen_kdtree_test.cpp
Exercises/08 - ICP/exercise/: CMakeLists.txt  brute_force_search.h  eigen_icp_2d.cpp  eigen_icp_2d.h  eigen_icp_2d_test.cpp  eigen_kdtree.h  rotations.h
Exercises/10 - ROS & Rviz/Exercises/my_first_ros_project/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Exercises/10 - ROS & Rviz/Exercises/my_first_ros_project/devel/$(CATKIN_PACKAGE_BIN_DESTINATION)/: publisher_node.py  subscriber_node.py
Exercises/10 - ROS & Rviz/Exercises/my_first_ros_project/devel/lib/pkgconfig/: my_first_package.pc
Exercises/10 - ROS & Rviz/Exercises/my_first_ros_project/devel/share/my_first_package/cmake/: my_first_packageConfig.cmake
Exercises/10 - ROS & Rviz/Exercises/my_first_ros_project/src/my_first_package/: CMakeLists.txt  package.xml
Exercises/10 - ROS & Rviz/Exercises/my_first_ros_project/src/my_first_package/scripts/: publisher_node.py
Exercises/10 - ROS and Rviz/CPP/ROSCPP/src/beginner/: CMakeLists.txt  package.xml
Exercises/10 - ROS and Rviz/CPP/ROSCPP/src/beginner/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  listener.cpp  talker.cpp
Exercises/10 - ROS and Rviz/CPP/ROSCPP/src/beginner/srv/: AddTwoInts.srv
Exercises/10 - ROS and Rviz/CPP/rp_10_scan_matcher/src/scan_matcher/: CMakeLists.txt  package.xml
Exercises/10 - ROS and Rviz/CPP/rp_10_scan_matcher/src/scan_matcher/src/: scan_matcher_node.cpp
Exercises/10 - ROS and Rviz/CPP/rp_11_laser_callback/src/laser_callback/: CMakeLists.txt  package.xml
Exercises/10 - ROS and Rviz/Exercises/my_first_ros_project/devel/: .rosinstall  setup.sh
Exercises/10 - ROS and Rviz/Exercises/my_first_ros_project/devel/$(CATKIN_PACKAGE_BIN_DESTINATION)/: publisher_node.py
Exercises/10 - ROS and Rviz/Exercises/my_first_ros_project/devel/include/my_first_package/: multiplier.h  multiplierRequest.h  position.h  values.h
Exercises/10 - ROS and Rviz/Exercises/my_first_ros_project/devel/lib/python3/dist-packages/my_first_package/msg/: __init__.py  _position.py
Exercises/10 - ROS and Rviz/Exercises/my_first_ros_project/devel/share/common-lisp/ros/my_first_package/msg/: _package.lisp  _package_position.lisp  _package_values.lisp  my_first_package-msg.asd  position.lisp  values.lisp
Exercises/10 - ROS and Rviz/Exercises/my_first_ros_project/devel/share/common-lisp/ros/my_first_package/srv/: _package_multiplier.lisp  multiplier.lisp
Exercises/10 - ROS and Rviz/Exercises/my_first_ros_project/devel/share/my_first_package/cmake/: my_first_package-msg-paths.cmake  my_first_packageConfig.cmake
Exercises/10 - ROS and Rviz/Exercises/my_first_ros_project/devel/share/roseus/ros/my_first_package/: manifest.l
Exercises/10 - ROS and Rviz/Exercises/my_first_ros_project/src/my_first_package/: CMakeLists.txt  package.xml
Exercises/10 - ROS and Rviz/Exercises/my_first_ros_project/src/my_first_package/msg/: position.msg
Exercises/10 - ROS and Rviz/Exercises/my_first_ros_project/src/my_first_package/scripts/: publisher_node.py
Exercises/10 - ROS and Rviz/Python/my_first_ros_project/devel/: .catkin  _setup_util.py
Exercises/10 - ROS and Rviz/Python/my_first_ros_project/devel/$(CATKIN_PACKAGE_BIN_DESTINATION)/: service_server_node.py  subscriber_node.py
Exercises/10 - ROS and Rviz/Python/my_first_ros_project/devel/include/my_first_package/: multiplierResponse.h
Exercises/10 - ROS and Rviz/Python/my_first_ros_project/devel/lib/pkgconfig/: my_first_package.pc
Exercises/10 - ROS and Rviz/Python/my_first_ros_project/src/my_first_package/: CMakeLists.txt
Exercises/10 - ROS and Rviz/Python/my_first_ros_project/src/my_first_package/scripts/: service_server_node.py
Exercises/10 - ROS and Rviz/Python/my_first_ros_project/src/my_first_package/srv/: multiplier.srv
Project/: CMakeLists.txt  README.md  RP_Rviz.rviz  build.sh  laserScan.sh  moveRobot.sh  robotOdometry.sh
Project/include/: lidar.h  robot.h  world.h
Project/src/: lidar.cpp
Project/test_data/: cappero_1r.json
Project/workspace/src/mrsim/: CMakeLists.txt  package.xml
Project/workspace/src/mrsim/include/: lidar.h  misc.h  robot.h  simple_geometry.h  types.h  world.h
Project/workspace/src/mrsim/launch/: startSim.launch
Project/workspace/src/mrsim/rviz/: RP_Rviz.rviz
Project/workspace/src/mrsim/src/: lidar.cpp  main.cpp  misc.cpp  robot.cpp  simple_geometry.cpp  world.cpp
Project/workspace/src/mrsim/test_data/: 1r_1l_unique_build.json  1r_unique_build.json  2r_1l_isolated_build.json  2r_2l_isolated_build.json  2r_2l_unique_build.json
(+15 files in other folders)
